k8s/week2/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app-v2
  template:
    metadata:
      labels:
        app: hello-app-v2
    spec:
      containers:
      - name: hello-app-v2
        image: nginxdemos/hello
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v2-service
spec:
  type: ClusterIP
  selector:
    app: hello-app-v2
  ports:
  - port: 80
    targetPort: 80
