k8s/week2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.local
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: hello-app-service
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-app-v2-service
            port:
              number: 80
